fixed text layout issues

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ img {
 }
 
 #discription {
-    /*text-align:center;*/
+    text-align:center;
     /*text-align:justify;*/
     font-size: 1.5rem;
     margin: 1rem;
